Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2009-02-25 Stephane Letz  <letz@grame.fr>

	* Fix JackNetDriver::Close method.
        * For audio device reservation, add card_to_num function.

2009-02-23 Stephane Letz  <letz@grame.fr>

	* Another fix in systemdeps.h and types.h: jack_time_t now uniquely defined in types.h.
	* Move generic code and data in JackNetInterface and JackNetMasterInterface classes.
        * First version of D-Bus based audio device rerservation.

2009-02-20 Stephane Letz  <letz@grame.fr>

	* Add InitConnection and InitRendering methods in JackNetSlaveInterface, better packet type checking in JackNetSlaveInterface::SyncRecv.
	* Change fMulticastIP handling in JackNetInterface.
        * Cleanup systemdeps.h on Windows.

2009-02-17 Stephane Letz  <letz@grame.fr>

	* Fix the mutex/signal classes on Windows.
        * Client incorrect re-naming fixed: now done at fifo level only.

2009-02-16 Stephane Letz  <letz@grame.fr>

	* Rework the mutex/signal classes. Use them in JackMessageBuffer.

2009-02-11 Stephane Letz  <letz@grame.fr>

	* Merge Solaris branch back on trunk.
        * Equality of input and output buffer size removed (for now) in JackOSSDriver.

2009-02-10 Stephane Letz  <letz@grame.fr>

	* Add a resample quality parameter in netadapter.

2009-02-09 Stephane Letz  <letz@grame.fr>

	* Use PRIu32 kind of macro in JackAlsaDriver again.
	* Now correctly return an error if JackServer::SetBufferSize could not change the buffer size (and was just restoring the current one).

2009-02-05 Stephane Letz  <letz@grame.fr>

	* Add a resample quality parameter in audioadapter.

2009-02-01 Stephane Letz  <letz@grame.fr>

	* Add a JACK_INTERNAL_DIR environment variable to be used for internal clients.

2009-01-30 Stephane Letz  <letz@grame.fr>
